k8s/ingress copy.yml
apiVersion: extensions/v1betav1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.com
    http:
      paths:
      - path: /api/v1
        backend:
          serviceName: apiv1-service
          servicePort: 3000
      - path: /api/v2
        backend:
          serviceName: apiv2-service
          servicePort: 3001
