k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-local
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: apiv1-service
            port: 
              number: 3000
      - path: /api/v2
        pathType: Prefix
        backend:
          service:
            name: apiv2-service
            port: 
              number: 3001
